--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 requests==2.31.0
 typhoon-ocr==0.3.8
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+Pillow==10.0.1
